# nemo_read

./: .gitignore  BROCHURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  MAILBOX_ROUTING.md  README.md  TODO.md  memory_last_chat.md  pyproject.toml
docs/: FLOWS.md  conventions_and_validation.md  cookbook.md  infeasibility_methodology.md  leap_area_wishlist.md  leap_export.md  leap_integration.md  scaffolding.md  schema.md  unit_conversions.md
infeas/: IN_leap_team_v035_issues_2026-05-05.md  OUT_workorder_to_leap_team_2026-05-05.md
inject/bioenergy/: BIOENERGY_CSV_SPEC.md  CSV_AUTHORING_GUIDE.md  HANDOVER_v042_r2a_RAS_infeas_to_dev_team_20260512.md  bioenergy_leap_input.csv.bak_pre_20260505  bioenergy_maximum_capacity_handoff.csv  build_canonical.py  canonical_leap_native.csv  inject_to_leap.py  placeholder_p2_v042_extend_bioeth_MU_20260511.csv  unit_audit.csv  (+2 more)
mailbox/: existing_cap_historical_prod.xlsx  inject_to_leap.py  run_workflow.py  unit_audit.csv
nemo_read/: __init__.py  _heartbeat.py  _leap_com.py  custom.py  db.py  dimensions.py  export.py  infeasibility.py  inject_base.py  inspect.py  leap_area.py  leap_branch_inspect.py  leap_conventions.py  leap_export.py  leap_units.py  lp_column_decode.py  parameter_forensics.py  parameters.py  probe_base.py  probe_brief.py  scaffold.py  schema.py  timeslice.py  trace.py  unit_conversions.py  validate.py  variables.py
tests/: test_claude_md_rules_enforced.py  test_conventions.py  test_demand_and_decode.py  test_extensions.py  test_infeasibility.py  test_inject_base.py  test_interp_separator.py  test_leap_area.py  test_lp_column_decode.py  test_nemo_read.py  test_parameter_forensics.py  test_probe_base.py  test_public_api_completeness.py  test_scaffold.py  test_trace.py  test_unit_conversions.py
(+281 files in other folders)
